[tool.poetry]
name = 'Flask-Mistune'
version = '0.5'
description = 'A interface between the Flask web framework and the Mistune Markdown parser.'
authors = ["Jesse Spangenberger <flamusdiu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
Flask = "~=1.0.0"
mistune = ">=2.0.0rc1"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
flakehell = "^0.9.0"
flake8-markdown = "^0.2.0"
flake8-variables-names = "^0.0.4"
flake8-bugbear = "^21.4.3"
flake8-bandit = "^2.1.2"
flake8-commas = "^2.0.0"
flake8-spellcheck = "^0.24.0"
flake8-comprehensions = "^3.4.0"
flake8-isort = "^4.0.0"
flake8-mutable = "^1.2.0"
flake8-docstrings = "^1.6.0"
flake8-quotes = "^3.2.0"
flake8-builtins = "^1.5.3"
flake8-eradicate = "^1.0.0"
flake8-pytest-style = "^1.4.1"
pep8-naming = "^0.11.1"
darglint = "^1.8.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flakehell]
exclude = [".git", "__pycache__"]
format = "colored"
max_line_length = 88
show_source = true
dictionaries = ['en_US', 'python', 'technical']
docstring-convention="google"

# D107: don't need docstrings for __init__ method of classes.
#       Infavor of documenting at the top of classes instead of inside __init__ methods.
# D203: 1 blank line required before class docstring.
# W503: Line breaks should occur after the binary operator to keep
#       all variable names aligned. Disabled infavor of W504 (PEP8 updates)
[tool.flakehell.plugins]
flake8-bandit = ["+*"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-commas = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*", "-D107"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-quotes = ["+*"]
flake8-spellcheck = ["+*"]
flake8-variables-names = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*", "-D203", "-W503"]
pyflakes = ["+*"]
pylint = ["+*"]

[tool.flakehell.exceptions."tests/**"]
flake8-darglint = ["-DAR101", "-DAR301"]
flake8-bandit = ["-S101"]

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.black]
line_length = 88