[metadata]
name = Flask-Mistune
version = attr: flask_mistune.__version__
url = https://github.com/flamusdiu/flask-mistune/
author = Jesse Spangenberger
author_email = flamusdiu@gmail.com
description = A interface between the Flask web framework and the Mistune Markdown parser.
classifiers = 
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules


[options]
zip_safe = False
include_package_data = true
pythin_requires = >=3.7,<4.0
package_dir = 
    = src
packages = find:
test_suite = tests
setup_requires =
    setuptools >= 46.4
install_requires =
    flask ~= 1.0.0
    mistune >= 2.0.0rc1
py_modules = flask_mistune

[options.packages.find]
where=src